Gallery fix width of modal image for 1024 width
Modal image was too wide when modal controls are positioned on the right side.

--- a/src/main/webapp/base/gallery/GallerySample.less
+++ b/src/main/webapp/base/gallery/GallerySample.less
@@ -829,6 +829,8 @@
   }
 
   .Gallery-modalCarousel {
+    // Reduce size of media to leave room for modal controls
+    width: ~"calc(100vw - 60px)";
     .GallerySlide {
       &-media {
         // Remove space for modal controls at bottom since they are now on right
